# kovid-obfuscation-passes

./: CMakeLists.txt  README.md
BreakCFG/: CMakeLists.txt
BreakCFG/LLVM/: BreakCFG.cpp  CMakeLists.txt
CFFlattening/LLVM/: CFFlattening.cpp  CMakeLists.txt
DummyCodeInsertion/: CMakeLists.txt
DummyCodeInsertion/GCC/: CMakeLists.txt  DummyCodeInsertion.cpp  Makefile
DummyCodeInsertion/LLVM/: CMakeLists.txt  DummyCodeInsertion.cpp
InstructionObf/LLVM/: CMakeLists.txt  InstructionObf.cpp
InstructionObfuscation/: CMakeLists.txt
InstructionObfuscation/GCC/: CMakeLists.txt  InstructionObfuscation.cpp  Makefile
InstructionObfuscation/LLVM/: CMakeLists.txt  InstructionObfuscation.cpp
RemoveMetadataAndUnusedCode/GCC/: CMakeLists.txt  Makefile  RemoveMetadataAndUnusedCode.cpp
RemoveMetadataAndUnusedCode/LLVM/: CMakeLists.txt  RemoveMetadataAndUnusedCode.cpp
RenameCode/: CMakeLists.txt  RenameCodePlugin.cpp
RenameCode/GCC/: CMakeLists.txt  Makefile  RenameCodePlugin.cpp
RenameCode/LLVM/: CMakeLists.txt
StringEncryption/GCC/: CMakeLists.txt  Makefile  StringEncryptionPlugin.cpp
StringEncryption/LLVM/: CMakeLists.txt  StringEncryption.cpp
StringEncryption/LLVM/LLDB/: CMakeLists.txt  StringEncryptionDeobfuscate.cpp
tools/: CMakeLists.txt
tools/kovid-deobfuscator/: CMakeLists.txt  kovid-deobfuscator.cpp
